--- a/info.yaml
+++ b/info.yaml
@@ -26,7 +26,7 @@ documentation:
   language:     "verilog" # other examples include Verilog, Amaranth, VHDL, etc
   doc_link:     ""      # URL to longer form documentation, eg the README.md in your repository
   clock_hz:     10000       # Clock frequency in Hz (if required)
-  picture:      ""      # relative path to a picture in your repository
+  picture:      "doc/rotary_encoder.png"      # relative path to a picture in your repository
   inputs:               # a description of what the inputs do
     - clock
     - reset
